--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,152 @@
-h5py
-imutils
-keras
-matplotlib
-numpy
-opencv_python
-Pillow
-scikit_learn
-seaborn
-tensorflow
-tqdm
+absl-py==2.1.0
+asttokens==3.0.0
+astunparse==1.6.3
+attrs==25.1.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
+cachetools==5.5.1
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cloudpickle==3.1.1
+contourpy==1.3.1
+cuda-python==12.6.0
+cudf-cu12==24.12.0
+cuml-cu12==24.12.0
+cupy-cuda12x==13.3.0
+cuvs-cu12==24.12.0
+cycler==0.12.1
+dask==2024.11.2
+dask-cuda==24.12.0
+dask-cudf-cu12==24.12.0
+dask-expr==1.1.19
+decorator==5.1.1
+defusedxml==0.7.1
+distributed==2024.11.2
+distributed-ucxx-cu12==0.41.0
+docopt==0.6.2
+executing==2.2.0
+fastjsonschema==2.21.1
+fastrlock==0.8.3
+flatbuffers==25.1.24
+fonttools==4.55.8
+fsspec==2025.2.0
+gast==0.6.0
+google-pasta==0.2.0
+grpcio==1.70.0
+h5py==3.12.1
+idna==3.10
+importlib_metadata==8.6.1
+imutils==0.5.4
+ipython==8.12.3
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+keras==3.8.0
+kiwisolver==1.4.8
+libclang==18.1.1
+libcudf-cu12==24.12.0
+libkvikio-cu12==24.12.1
+libucx-cu12==1.17.0.post1
+libucxx-cu12==0.41.0
+llvmlite==0.44.0
+locket==1.0.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.1.1
+ml-dtypes==0.4.1
+msgpack==1.1.0
+namex==0.0.8
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+numba==0.61.0
+numba-cuda==0.0.17.1
+numpy==2.0.2
+nvidia-cublas-cu12==12.8.3.14
+nvidia-cufft-cu12==11.3.3.41
+nvidia-curand-cu12==10.3.9.55
+nvidia-cusolver-cu12==11.7.2.55
+nvidia-cusparse-cu12==12.5.7.53
+nvidia-nvcomp-cu12==4.1.0.6
+nvidia-nvjitlink-cu12==12.8.61
+nvtx==0.2.10
+opencv-python==4.11.0.86
+opt_einsum==3.4.0
+optree==0.14.0
+packaging==24.2
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+partd==1.4.2
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==11.1.0
+pipreqs==0.5.0
+platformdirs==4.3.6
+prompt_toolkit==3.0.50
+protobuf==5.29.3
+psutil==6.1.1
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.1.0
+Pygments==2.19.1
+pylibcudf-cu12==24.12.0
+pylibraft-cu12==24.12.0
+pynvjitlink-cu12==0.5.0
+pynvml==11.4.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-version==0.0.2
+pytz==2025.1
+PyYAML==6.0.2
+pyzmq==26.2.1
+raft-dask-cu12==24.12.0
+rapids-dask-dependency==24.12.0
+referencing==0.36.2
+requests==2.32.3
+rich==13.9.4
+rmm-cu12==24.12.1
+rpds-py==0.22.3
+scikit-learn==1.6.1
+scipy==1.15.1
+seaborn==0.13.2
+six==1.17.0
+sortedcontainers==2.4.0
+soupsieve==2.6
+stack-data==0.6.3
+tblib==3.0.0
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+tensorflow==2.18.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.5.0
+threadpoolctl==3.5.0
+tinycss2==1.4.0
+toolz==1.0.0
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+treelite==4.3.0
+typing_extensions==4.12.2
+tzdata==2025.1
+ucx-py-cu12==0.41.0
+ucxx-cu12==0.41.0
+urllib3==2.3.0
+wcwidth==0.2.13
+webencodings==0.5.1
+Werkzeug==3.1.3
+wrapt==1.17.2
+yarg==0.1.9
+zict==3.0.0
+zipp==3.21.0
