--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
 absl-py==2.1.0
+annotated-types==0.7.0
+anyio==4.8.0
 asttokens==3.0.0
 astunparse==1.6.3
 attrs==25.1.0
+autogen-agentchat==0.4.7
+autogen-agents==0.0.0
+autogen-core==0.4.7
+autogen-ext==0.4.7
 backcall==0.2.0
 beautifulsoup4==4.12.3
 bleach==6.2.0
+blinker==1.9.0
 cachetools==5.5.1
 certifi==2025.1.31
 charset-normalizer==3.4.1
@@ -23,26 +30,39 @@ dask-cudf-cu12==24.12.0
 dask-expr==1.1.19
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.18
+diskcache==5.6.3
 distributed==2024.11.2
 distributed-ucxx-cu12==0.41.0
+distro==1.9.0
 docopt==0.6.2
+exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
 fastrlock==0.8.3
+FLAML==2.3.4
+Flask==3.1.0
+flask-cors==5.0.1
 flatbuffers==25.1.24
 fonttools==4.55.8
 fsspec==2025.2.0
 gast==0.6.0
 google-pasta==0.2.0
 grpcio==1.70.0
+h11==0.14.0
 h5py==3.12.1
+httpcore==1.0.7
+httpx==0.28.1
 idna==3.10
-importlib_metadata==8.6.1
+importlib_metadata==8.5.0
 imutils==0.5.4
 ipython==8.12.3
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
+jsonref==1.1.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
@@ -81,7 +101,9 @@ nvidia-cusparse-cu12==12.5.7.53
 nvidia-nvcomp-cu12==4.1.0.6
 nvidia-nvjitlink-cu12==12.8.61
 nvtx==0.2.10
+openai==1.63.2
 opencv-python==4.11.0.86
+opentelemetry-api==1.30.0
 opt_einsum==3.4.0
 optree==0.14.0
 packaging==24.2
@@ -100,6 +122,9 @@ psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==18.1.0
+pyautogen==0.2.0b5
+pydantic==2.10.6
+pydantic_core==2.27.2
 Pygments==2.19.1
 pylibcudf-cu12==24.12.0
 pylibraft-cu12==24.12.0
@@ -107,6 +132,7 @@ pynvjitlink-cu12==0.5.0
 pynvml==11.4.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 python-version==0.0.2
 pytz==2025.1
 PyYAML==6.0.2
@@ -114,6 +140,7 @@ pyzmq==26.2.1
 raft-dask-cu12==24.12.0
 rapids-dask-dependency==24.12.0
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rich==13.9.4
 rmm-cu12==24.12.1
@@ -122,6 +149,7 @@ scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.6
 stack-data==0.6.3
@@ -132,6 +160,7 @@ tensorflow==2.18.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 threadpoolctl==3.5.0
+tiktoken==0.9.0
 tinycss2==1.4.0
 toolz==1.0.0
 tornado==6.4.2
